Gnome-shell: Increase font size to avoid blurry icons

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -2,7 +2,7 @@ $corner-radius: 2px;
 
 
 /* GLOBALS */
-$font-size: 10;
+$font-size: 11;
 $font-family: Roboto,Ubuntu, Cantarell, Sans-Serif;
 $_bubble_bg_color: $osd_bg_color;
 $_bubble_fg_color: $fg_color;
